Passed one test

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <b>Price in cents:</b>
-  <%= @product.price_in_cents %>
+  <b>Price in dollars:</b>
+  <%= number_to_currency @product.price_in_dollars %>
 </p>
 
 
